gcp/backend/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: gcpmamie-ingress
spec:
 backend:
  serviceName: gcpmamie-server-with-cloudsql
  servicePort: 8080
